fixed layout issues in the application.html.erb

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,14 +1,67 @@
+body {
+	background-image: url(header-bg-2.jpg) top no-repeat; background-attachment:fixed;
+	/*border: 4px solid black;*/
+	text-align: center;
+    color: #fff;
+    background-attachment: scroll;
+    /*background-image: url(header-bg-2.jpg);*/
+    background-color: rgba(255,255,255,0.0);
+    background-position: center center;
+    background-repeat: none;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+html, body {
+	margin:0;
+	padding:0;
+	height:100%;
+}
+
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+
+#footer-section {
+	width:100%;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+
+#footer-container {
+	height:100px;
+}
+
+header {
+	/*height:100px;*/
+	background-color: rgba(255,255,255,0.0);
+
+}
 .form-signin-heading {
   color: #FFFFFF;
 }
 
 .form-signin {
-  margin-top: 50%;
+  margin-top: 20%;
+}
+
+.intro-lead-in {
+	margin-top: 2%;
 }
 
 .header-focus {
-  height: 500px;
+  min-height: 700px;
   background-color: rgba(255,255,255,0.4);
+  padding: 0;
+}
+
+.header-title {
+  height: 120px;
+  background-color: rgba(0,0,0,0.4);
   padding: 0;
 }
 
@@ -20,7 +73,7 @@
     width: 300px;
     line-height: 50px;
     text-transform: uppercase;
-    margin-top: 20%;
+    margin-top: 0%;
 }
 
 .header-label-sm {
